# FluencyFeatureAnnotator

./: .gitignore  Dockerfile  README.md  docker_build.sh  docker_run.sh  pyproject.toml  unsynced_package_install.sh
src/fluencyfeatureannotator/: README.md  __init__.py  fluency_feature_annotator.py  main.py  requirements.txt
src/fluencyfeatureannotator/modules/: __init__.py
src/fluencyfeatureannotator/modules/common/: __init__.py  base.py  clause.py  gcp.py  turn.py  word.py
src/fluencyfeatureannotator/modules/feature_extractor/: __init__.py  utterance_fluency_measure_extractor.py
src/fluencyfeatureannotator/modules/forced_alignment/: data_module.py  fa.py  less_peaky_ctc_fa.py  lightning.py  loss.py  models.py  text_transformer.py  tokenizer.py  transforms.py  wav2vec_fa.py
src/fluencyfeatureannotator/modules/forced_alignment/resources/: global_stats.json
src/fluencyfeatureannotator/modules/forced_alignment/utils/: visualize.py
src/fluencyfeatureannotator/modules/forced_alignment/utils/rev/: df_2_rev.py
src/fluencyfeatureannotator/modules/forced_alignment/utils/text/: cleaners.py  numbers.py
src/fluencyfeatureannotator/modules/models/: __init__.py
src/fluencyfeatureannotator/modules/models/asr/: google_transcript_generator.py
src/fluencyfeatureannotator/modules/models/dependency_parser/: dependency_parser.py
src/fluencyfeatureannotator/modules/models/disfluency_predictor/: disfluency_predictor.py
src/fluencyfeatureannotator/modules/models/punctuation_predictor/: punctuation_predictor.py
src/fluencyfeatureannotator/modules/models/utils/: base.py  preprocess.py
src/fluencyfeatureannotator/modules/models/vad/: praat_vad.py  silero_vad.py  webrtc_vad.py
src/fluencyfeatureannotator/modules/pipeline/: __init__.py  asr.py  dependency_parser.py  pause_location_detector.py  pipeline.py  pruning.py  sentence_end_detector.py
src/fluencyfeatureannotator/modules/pipeline/utils/: base.py  dependency_tree.py  exceptions.py  pause_location.py  semantic_graph.py
src/fluencyfeatureannotator/modules/resources/dependency_parser/: mark_2_id.json
src/fluencyfeatureannotator/modules/resources/pretrained_model/finetuned_disfluency_predictor_v1/: config.json
src/fluencyfeatureannotator/modules/resources/pretrained_model/finetuned_disfluency_predictor_v2/: config.json
src/fluencyfeatureannotator/modules/resources/pretrained_model/finetuned_disfluency_predictor_v3/: config.json
src/fluencyfeatureannotator/modules/resources/pretrained_model/finetuned_disfluency_predictor_v4/: config.json
src/fluencyfeatureannotator/modules/resources/pretrained_model/finetuned_punctuation_predictor_v1/: config.json
src/fluencyfeatureannotator/modules/utils/: backend.py  rev_utils.py  split_interview_audio.py
